--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,7 +4,7 @@ server {
     server_name 65.1.148.232;
     location = /favicon.ico { access_log off; log_not_found off; }
     location /staticfiles/ {
-        root /home/ubuntu/blogprojectdrf;
+        root /home/ubuntu/project1;
     }
     location / {
         include proxy_params;
